--- a/src/app/core/layout/components/layout.component.scss
+++ b/src/app/core/layout/components/layout.component.scss
@@ -9,11 +9,8 @@
     flex: 1;
     overflow: auto;
     display: flex;
-    justify-content: center;
 
     .content-container {
-      width: 75rem;
-      padding: 1rem;
     }
   }
 
