--- a/src/app/core/layout/components/menu/menu-bottom/menu-bottom.component.scss
+++ b/src/app/core/layout/components/menu/menu-bottom/menu-bottom.component.scss
@@ -6,11 +6,10 @@
 
   .menu-bottom__version {
     display: flex;
-    justify-content: center;
-    font-size: 0.65rem;
+    font-size: 0.8rem;
     overflow: hidden;
     white-space: pre;
-
+    padding-left: 1rem;
   }
 
   .menu-bottom_lightning {
