--- a/src/app/core/layout/components/menu/menu.component.scss
+++ b/src/app/core/layout/components/menu/menu.component.scss
@@ -13,10 +13,6 @@
     box-shadow: 0 .4375rem .5rem -.25rem #1f263e1a, 0 .3125rem 1.375rem .25rem #1f263e0f, 0 .75rem 1.0625rem .125rem #1f263e12;
   }
 
-  &.menu-container__closed {
-    width: 3.5rem;
-  }
-
   &.menu-container__opened {
     width: 15rem;
   }
